# SINDyNeuroSurrogate

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  analysis.py  analysis_current.py  equations.py  justfile  pyproject.toml  setup.py
docs/drawio/: 3comp_surr.drawio
docs/figures/model/: 3comp.drawio
docs/poster/: bibliography.bib  main.typ
docs/poster/pic/: 3comp.drawio  steady_hh3_20_processed.drawio  three_comp_result.drawio  traub_withcap.drawio
docs/slide/: first.typ  main.typ  原稿.md
docs/slide/result/: single_metrics.csv  single_scalar_metrics.csv
docs/slide/script/: 発表に対するコメント.md
docs/slide/shared/: appendix.typ  intro.typ  method.typ  style.typ
figures/model/: 3comp.drawio  7comp.drawio
neurosurrogate/: __init__.py  ae_preprocessor.py  build_coords.py  build_current.py  build_feature_library.py  calc_engine.py  calc_utils.py  config.py  currents.py  dataset.py  engine.py  model.py  model_neuron.py  model_neurosindy.py  neuron_core.py  opcost.py  plots.py  profiler.py  profiler_model.py  profiler_wave.py  xarray_utils.py
neurosurrogate/builder/: build_coords.py  build_current.py  build_feature_library.py  build_neuron.py  builder_feature_libraries.py  registry_current.py  registry_feature_libraries.py  registry_feature_library_builder.py
neurosurrogate/compartments/: __init__.py  common.py  hh.py  traub.py
neurosurrogate/core/: access.py  coords.py  libraries.py  network.py  simulator.py
neurosurrogate/dataset_utils/: __init__.py  _base.py
neurosurrogate/dataset_utils/hh/: hh.c  hh.h  hh_simulator.pyx
neurosurrogate/dataset_utils/traub/: traub.c  traub.h  traub_simulator.pyx
neurosurrogate/features/: coords.py  libraries.py
neurosurrogate/metrics/: analysis.py  eval.py  eval_sweep.py  opcost.py  result_bundle.py  sindy.py  sindy_result.py  wave.py
neurosurrogate/model/: model_compartments.py  model_dataset.py  model_neuron.py  model_neurosindy.py  model_preprocessor.py  registry_compartments.py  registry_neuron.py
neurosurrogate/modeling/: __init__.py  _simulater.py  _surrogate.py  calc_engine.py  data_processing.py  hh_utils.py  neuron_core.py  numba_core.py  numba_core_utils.py  profiler.py  simulate_numba.py  simulater.py  surrogate.py  surrogate_numba.py  xarray_utils.py
neurosurrogate/modeling/sindy/: predict_cy.pyx.j2  surrogate.py
neurosurrogate/models/: __init__.py  traub19.py
neurosurrogate/profiler/: profiler_model.py  profiler_view.py  profiler_wave.py  registry_view.py
neurosurrogate/registry/: compartments.py  current.py  feature_libraries.py  neuron.py  neurosindy.py  traub19.py
neurosurrogate/registry/compartments/: __init__.py  hh.py  traub.py
neurosurrogate/registry/neuron/: traub19.py
neurosurrogate/surrogate/: __init__.py  analysis.py  autoencoder.py  base.py  bundle.py  hybrid.py  libraries.py  meta.py  neurosindy.py  preprocessor.py  replace.py  sindy.py
neurosurrogate/surrogate/ansatz/: __init__.py  base.py  common.py  hybrid.py  roles.py  sindy.py  ude.py
neurosurrogate/surrogate/closure/: base.py  ude.py
neurosurrogate/surrogate/libraries/: catalog.py  entry.py
neurosurrogate/surrogate/preprocessor/: __init__.py  autoencoder.py  base.py  pca.py
neurosurrogate/surrogate/sindy/: __init__.py  catalog.py  entry.py
neurosurrogate/utils/: __init__.py  base_hh.py  base_multi.py  current_generators.py  data_processing.py  plots.py
neurosurrogate/view/: engine.py  model.py  plots.py  specs.py  train.py  utils.py
scripts/: analysis.py  analysis_core.py  analysis_single.py  analysis_sweep.py  base.py  base_hh.py  builder.py  equations.py  eval.py  feature_library_components.py  flow.py  io_handler.py  main.py  marimo.py  mlflow_io.py  neuron_models.py  sweep_traces.py
scripts/analysis/: access.py  actions.py  panel.py  single.py  style.py  sweep.py  targets.py  ui.py  view.py
scripts/analysis/mode/: single.py  sweep.py
scripts/analysis/save/: panel.py  restore.py
scripts/conf/: config.yaml  feature_library_components.py  neuron_models.py  preprocessor.py
scripts/conf/current_generators/: base.yaml
scripts/conf/datasets/: default.yaml
scripts/conf/experiment/: default.yaml  exp1.yaml  exp2.yaml  exp3.yaml  exp4.yaml  exp5.yaml
scripts/conf/models/: default.yaml
scripts/conf/neurons/: default.yaml
scripts/conf/sindy/: base.yaml  base_traub.yaml  hh_informed.yaml  hh_relaxation.yaml  (+2 more)
scripts/tasks/: data.py  eval.py  train.py  utils.py
scripts/utils/: base_hh.py  boot.py  builder.py  builder_core.py  builder_datasets.py  current_generators.py  flow.py  io_handler.py  log_model.py  log_utils.py  mlflow_handler.py  plots.py  streamlit.py
tests/: conftest.py  test_inits.py  test_surrogate.py
(+66 files in other folders)
