[project]
name = "neurosurrogate"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MunechikaHaruki", email = "h.m.haruki.160@gmail.com" }
]

requires-python = ">= 3.11.0"

dependencies = [
    "matplotlib>=3.10.3",
    "pysindy~=2.0.0",
    "mlflow>=3.3.2",
    "scikit-learn>=1.6.1",
    "numpy >=2.3.3",
    "xarray>=2024.7.0",
    "hydra-core>=1.3.2",
    "scipy>=1.16.2",
    "numba>=0.63.1",
    "prefect>=3.6.10",
    "japanize-matplotlib>=1.1.3",
]
    #"torch>=2.7.1",
    #"torchvision>=0.22.1",
    #"torchdiffeq>=0.2.5",

[dependency-groups]
dev = [
    "lizard>=1.17.30",
    "radon>=6.0.1",
    "mypy>=1.17.1",
    "psutil>=7.0.0",
    "ruff>=0.12.9",
    "pylint>=3.3.8",
]

[tool.mypy]
strict = true
exclude = ["scripts/.*"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "pysindy"]
ignore_missing_imports = true



[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[build-system]
requires = ["setuptools>=61.0", "cython","numpy"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]           # カレントディレクトリから探す
include = ["neurosurrogate*"]
namespaces = false      # 暗黙的な名前空間パッケージの探索を無効化
