[project]
name = "neurosurrogate"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MunechikaHaruki", email = "h.m.haruki.160@gmail.com" }
]

requires-python = ">= 3.11.0"

dependencies = [
    "matplotlib>=3.10.3",
    "pysindy~=2.0.0",
    "mlflow>=3.3.2",
    "scikit-learn<1.6.0",
    "numpy >=2.3.3",
    "xarray>=2024.7.0",
    "hydra-core>=1.3.2",
    "scipy>=1.16.2",
    "tabulate>=0.10.0",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "hydra-optuna-sweeper>=1.2.0",
    "jax>=0.10.0",
    "optax>=0.2.8",
    "efel>=5.7.23",
    "networkx>=3.6.1",
    "setuptools>=83.0.0",
    "sympy>=1.14.0",
    "matplotlib-fontja>=1.1.0",
]

[dependency-groups]
dev = [
    "lizard>=1.17.30",
    "radon>=6.0.1",
    "mypy>=1.17.1",
    "psutil>=7.0.0",
    "ruff>=0.12.9",
    "marimo[mcp]>=0.21.0",
    "pydantic-ai-slim>=1.70.0",
    "google-genai>=1.68.0",
    "pynvml>=13.0.1",
    "pyright>=1.1.0",
    "pytest>=9.1.1",
    "pandas-stubs>=3.0.3.260530",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = false
warn_return_any = true
warn_unused_ignores = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "pysindy", "sympy.*", "efel", "joblib", "optax", "networkx", "seaborn", "matplotlib_fontja"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E/F: 基本, I: isort, UP: pyupgrade, B: bugbear, SIM: simplify

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["."]           # カレントディレクトリから探す
include = ["neurosurrogate*"]
namespaces = false      # 暗黙的な名前空間パッケージの探索を無効化

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
